# bevycraft

./: Cargo.toml  bevycraft.d.ts  bevycraft.js  bevycraft_bg.wasm.d.ts  index.html
.github/workflows/: rust.yml  wasm.yml
assets/: manifest.assets
assets/data/: manifest.assets
assets/data/biomes/: dungeon.biome  forest.biome
assets/data/items/: dungeon_map.item  healing_potion.item  weak_healing_potion.item
src/: camera.rs  data.rs  entities.rs  hud.rs  main.rs  map.rs  player.rs  player_input.rs  spawner.rs  texture.rs  turn_state.rs
src/entities/: ai.rs  avatar.rs  combat.rs  effects.rs  fov.rs  items.rs  mobs.rs  mod.rs  spawning.rs
src/map/: map_builder.rs  mod.rs  mouse.rs  query_adapter.rs  texture.rs
src/map/map_builder/: automata.rs  mod.rs  rooms.rs
src/systems/: mod.rs
src/ui/: hud.rs  menu.rs  mod.rs
web/: index.html
