[package]
name = "bevycraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_ecs_tilemap = "0.6.0"
rand = "0.8.5"
bracket-geometry = "0.8.3"
bracket-algorithm-traits = "0.8.2"
bracket-pathfinding = "0.8.4"
itertools = "0.10.3"